[package]
name = "server_crate"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
tokio = { version = "1.16.1", features = ["full"] }
crossbeam-channel = "0.5"
serde_json = "1.0.79"
serde = { version = "1.0.136", features = ["derive"] }
crossbeam-utils = "0.8.7"